--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -158,10 +158,10 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <a class="navbar-brand" href="#">Goldencat Chat</a>
+    <a class="navbar-brand" href="#">chatroom-1</a>
     <div class="ml-auto social-icons">
-        <a href="https://www.youtube.com/@codewithgoldencat" title="YouTube"><i class="fab fa-youtube"></i></a>
-        <a href="https://www.linkedin.com/in/code-with-goldecat-453460297/" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/vootlasaicharan" title="github"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/vootlasaicharan" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         <a href="/logout" id="logout" title="Logout"><i class="fas fa-right-from-bracket"></i></a>
     </div>
 </nav>
@@ -195,7 +195,7 @@
 
 <!-- Footer -->
 <footer class="footer">
-    <p>&copy; 2024 Code With Goldencat. All rights reserved. | <a href="#" class="custom-link">Privacy Policy</a> | <a href="#" class="custom-link">Terms of Service</a></p>
+    <p>&copy; 2024 Code With vootlasaicharan. All rights reserved. | <a href="#" class="custom-link">Privacy Policy</a> | <a href="#" class="custom-link">Terms of Service</a></p>
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
