--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Goldencat Chat</title>
+    <title>Register - chatroom-1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -117,14 +117,10 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-custom">
-    <a class="navbar-brand" href="#">Goldencat Chat</a>
+    <a class="navbar-brand" href="#">chatroom-1</a>
     <div class="social-icons">
-        <a href="https://www.youtube.com" target="_blank" title="YouTube">
-            <i class="fab fa-youtube"></i>
-        </a>
-        <a href="https://www.linkedin.com" target="_blank" title="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-        </a>
+        <a href="https://github.com/vootlasaicharan" title="github"><i class="fab fa-github"></i></a>
+        <a href="https://linkedin.com/in/vootlasaicharan" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
     </div>
 </nav>
 
@@ -149,7 +145,7 @@
 </div>
 
 <footer class="footer">
-    <p>&copy; 2024 Code With Goldencat. All rights reserved. | <a href="#" class="custom-link">Privacy Policy</a> | <a href="#" class="custom-link">Terms of Service</a></p>
+    <p>&copy; 2024 Code With vootlasaicharan. All rights reserved. | <a href="#" class="custom-link">Privacy Policy</a> | <a href="#" class="custom-link">Terms of Service</a></p>
 </footer>
 </body>
 </html>
